--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead mt-5"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
@@ -36,6 +36,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/currentDate.js"></script>
+    <script src="assets/js/calendar.js"></script>
   </body>
 </html>
