added layout for planner

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead mt-5"></p>
     </header>
-    <div class="container">
+    <div id="timeSlots" class="container justify-content-center mt-5">
       <!-- Timeblocks go here -->
     </div>
 
