a little bit of fun with the CSS

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
 
   <body>
     <header>
+      <div>
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead mt-5"></p>
+    </div>
     </header>
     <div id="timeSlots" class="container justify-content-center mt-5">
       <!-- Timeblocks go here -->
+    </div>
+    <div class="d-flex justify-content-center">
+      <h2>&copy Matt Dunmore 2024</h2>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
